syntax = "proto3";
package taikai.v1;

import "google/protobuf/timestamp.proto";
import "taikai/v1/enums.proto";
import "google/protobuf/struct.proto";


message Hello {
  // @gotags: fake:"skip"
  string id = 1 [json_name = "id"];
  // @gotags: fake:"skip"
  google.protobuf.Timestamp created_at = 2 [json_name = "created_at"];
  // @gotags: fake:"skip"
  google.protobuf.Timestamp updated_at = 3 [json_name = "updated_at"];
  // @gotags: fake:"{number:1,1}"
  HelloType hello_type = 4 [json_name = "hello_type"];
  // @gotags: fake:"{beername}"
  optional string person_name = 5 [json_name = "person_name"];
}

message Org {
	// @gotags: fake:"skip"
	string id = 1 [json_name = "id"];
	// @gotags: fake:"skip"
	google.protobuf.Timestamp created_at = 2 [json_name = "created_at"];
	// @gotags: fake:"skip"
	google.protobuf.Timestamp updated_at = 3 [json_name = "updated_at"];
	// @gotags: fake:"{company}"
	string name = 4 [json_name = "name"];
	// @gotags: fake:"{mission}"
	optional string description = 5 [json_name = "description"];
	// @gotangs: fake:"{clint}"
	repeated User owners = 6 [json_name = "owners"]; // this should be Ids because we are normalized :P
}

message User {
	// @gotags: fake:"skip"
	optional string id = 1 [json_name = "id"];
	// @gotags: fake:"skip"
	google.protobuf.Timestamp created_at = 2 [json_name = "created_at"];
	// @gotags: fake:"skip"
	google.protobuf.Timestamp updated_at = 3 [json_name = "updated_at"];
	// @gotags: fake:"{username}"
	optional string username = 4 [json_name = "username"];
	// @gotags: fake:"{email}"
	optional string email = 5 [json_name = "email"];
	// @gotags: fake:"{firstname}"
	optional string first_name = 6 [json_name = "first_name"];
	// @gotags: fake:"{lastname}"
	optional string last_name = 7 [json_name = "last_name"];
	// @gotags: fake:"{city}"
	optional string city = 11 [json_name = "city"];
	// @gotags: fake:"{zip}"
	optional string zip = 13 [json_name = "zip"];
	// @gotags: fake:"{jobtitle}"
	optional string job_title = 17 [json_name = "job_title"];
	// @gotags: fake:"skip"
	optional string org_id = 18 [json_name = "org_id"];
	// @gotags: fake:"skip"
	optional string meetup_id = 19 [json_name = "meetup_id"];
	// @gotags: fake:"skip"
	repeated string group_id = 20 [json_name = "group_id"];
	// @gotags: fake:"{state}"
	optional string state = 21 [json_name = "state"];
	}

message Group {
	// @gotags: fake:"skip"
	optional string id = 1 [json_name = "id"];
	// @gotags: fake:"skip"
	google.protobuf.Timestamp created_at = 2 [json_name = "created_at"];
	// @gotags: fake:"skip"
	google.protobuf.Timestamp updated_at = 3 [json_name = "updated_at"];
	// @gotags: fake:"{groupname}"
	optional string name = 4 [json_name = "name"];
	// @gotags: fake:"{description}"
	optional string description = 5 [json_name = "description"];
	// @gotags: fake:"skip"
	optional string org_id = 6 [json_name = "org_id"];
	// @gotags: fake:"skip"
	optional string meetup_id = 7 [json_name = "meetup_id"];
	}

